Añadiendo el header y mejorando el diseño.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <link rel="stylesheet" href="/css/index.css">
     </head>
     <body>
+        <header class="header">
+            <p>Este es el header</p>
+        </header>
        <div>
            <h2>Título Descriptivo</h2>
            <p>Contenido, cualquier texto</p>
