Añadí y diseñé el footer

--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
            <h2>Título Descriptivo</h2>
            <p>Contenido, cualquier texto</p>
         </div> 
+        <footer class="footer">
+            <li>contenido uno</li>
+            <li>contenido dos</li>
+            <li>contenido tres</li>
+        </footer>
     </body>
 </html>
