--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Aprendiendo Git</title>
+        <title>Cambié el titulo</title>
         <link rel="stylesheet" href="/css/index.css">
     </head>
     <body>
