--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <header class="header">
+            <img src="/src/rick.png" alt="Rick Sanches">
             <p>Este es el header</p>
         </header>
        <div>
