Encapsulé los elementos del body y le puse un borde blanco.

--- a/index.html
+++ b/index.html
@@ -6,18 +6,20 @@
         <link rel="stylesheet" href="/css/index.css">
     </head>
     <body>
-        <header class="header">
-            <img src="/src/rick.png" alt="Rick Sanches">
-            <p>Este es el header</p>
-        </header>
-       <div>
-           <h2>Título Descriptivo</h2>
-           <p>Contenido, cualquier texto</p>
-        </div> 
-        <footer class="footer">
-            <li>contenido uno</li>
-            <li>contenido dos</li>
-            <li>contenido tres</li>
-        </footer>
+        <section id="father" >
+            <header class="header">
+                <img src="/src/rick.png" alt="Rick Sanches">
+                <p>Este es el header</p>
+            </header>
+             <div>
+                <h2>Título Descriptivo</h2>
+                <p>Contenido, cualquier texto</p>
+            </div> 
+            <footer class="footer">
+                <li>contenido uno</li>
+                <li>contenido dos</li>
+                <li>contenido tres</li>
+            </footer>
+        </section>
     </body>
 </html>
