corrgí las rutas de los archivos para que se hicieran los cambios de estilos.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8" />
         <title>3.0 Cambié el titulo</title>
-        <link rel="stylesheet" href="/Aprendiendo-Git-Y-GitHud/css/index.css">
+        <link rel="stylesheet" href="/css/index.css">
     </head>
     <body>
         <header class="header">
-            <img src="/Aprendiendo-Git-Y-GitHud/src/rick.png" alt="Rick Sanches">
+            <img src="/src/rick.png" alt="Rick Sanches">
             <p>Este es el header</p>
         </header>
        <div>
