Agregué un texto bajo el footer.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                 <li>contenido dos</li>
                 <li>contenido tres</li>
             </footer>
+            <section class="footer__below">
+                 -texto bajo footer-
+            </section>
         </section>
     </body>
 </html>
