--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                 <li>contenido tres</li>
             </footer>
             <section class="footer__below">
-                 -texto bajo footer-
+                 "Si quieres cambiar al mundo, cambiate a ti mismo." <br />
+                 - Ghandi.
             </section>
         </section>
     </body>
